# Multimodal_NN_Praktikum

./: .gitattributes  .gitignore  README.md  notebook.ipynb  pyproject.toml
config/: config.yaml
eda/: ingredients.html  train_vs_test.html  train_vs_val.html
scripts/: dataset.py  test.py  test_model.py  utils.py  utils_new.py
