[project]
name = "multimodal-nn-praktikum"
version = "0.1.0"
description = "Final project of Module 4"
authors = [
    {name = "Denis Demidko"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "torch (>=2.10.0,<3.0.0)",
    "ydata-profiling (>=4.18.1,<5.0.0)",
    "timm (>=1.0.25,<2.0.0)",
    "torchvision (>=0.25.0,<0.26.0)",
    "pandas (<3.0.0)",
    "ipywidgets (>=8.1.8,<9.0.0)",
    "beeply (>=1.0.2,<2.0.0)",
    "albumentations (>=2.0.8,<3.0.0)",
    "setuptools (<70.0.0)",
    "transformers (>=5.3.0,<6.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel>=6.0.0"
]
[tool.poetry]
package-mode = false 

[[tool.poetry.source]]
name = "pypi-origin"
url = "https://pypi.org/simple/"
priority = "primary"

